chaned the input images to an img file (ball-levels) and added jquery code in which on being clicked, the difficulty pokeballs show up at 100% if selected, but turn off to 50% if not clicked highlighting definitely which pokeball was clicked. Further testing to see if code has made it iOS friendly with the difficulty issue not showing up.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,7 @@ input[type="image"]:focus {
 .ball-levels {
   height: 15vh;
   width: 15vh;
+  opacity:50%;
 }
 
 /*Start*/
